--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        
+        <div class="about-me">
+
+        </div>
+        <div class="contact-info">
+            
+        </div>
     </body>
 </html>
