--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     </head>
     <body>
         <div class="about-me">
-
+            <h1 style="font-size: 4rem; font-weight: bolder;">About me</h1>
+            <h2 style="font-size: 2.8rem; font-weight: 500;">Nguyen Hung Cuong</h2>
+            <p>I'm a final year Computer Science major and Java Intern, eager to explore new horizons</p>
         </div>
         <div class="contact-info">
-            
+            <h1>Contact me:</h1>
         </div>
     </body>
 </html>
