feat: add contact section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <p>I'm a final year Computer Science major and Java Intern, eager to explore new horizons</p>
         </div>
         <div class="contact-info">
-            <h1>Contact me:</h1>
+            <h1 style="font-size: 4rem; font-weight: bolder;">Contact me:</h1>
+            <p>Email: cuognnguyen02042004@gmail.com</p>
+            <p>Phone: 0399191156</p>
         </div>
     </body>
 </html>
