fix: correct typo in contact section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="contact-info">
             <h1 style="font-size: 4rem; font-weight: bolder;">Contact me:</h1>
-            <p>Email: cuognnguyen02042004@gmail.com</p>
+            <p>Email: cuongnguyen02042004@gmail.com</p>
             <p>Phone: 0399191156</p>
         </div>
     </body>
