feat: add contact form

--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
             <p>Email: cuongnguyen02042004@gmail.com</p>
             <p>Phone: 0399191156</p>
         </div>
+        <form action="">
+            <label for="email">Email</label> <br>
+            <input type="text" name="email" id="email"> <br>
+            <label for="com">Request</label> <br>
+            <textarea name="com" id="com" cols="20" rows="5"></textarea> <br>
+            <input type="submit" value="send" name="submit" id="submit">
+        </form>
     </body>
 </html>
