feat: add projects section (ref #2)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,45 @@
             <h2 style="font-size: 2.8rem; font-weight: 500;">Nguyen Hung Cuong</h2>
             <p>I'm a final year Computer Science major and Java Intern, eager to explore new horizons</p>
         </div>
+        <div class="projects-section">
+            <h1 style="font-size: 4rem; font-weight: bolder;">Projects</h1>
+
+            <article class="project-item">
+                <h3 style="font-size: 2rem; margin-bottom: 0.5rem;">Java Tetris Game</h3>
+                <p><strong>Stack:</strong> Java Swing | <strong>Date:</strong> Mar – May 2024</p>
+                <ul>
+                    <li>Developed a fully functional Tetris game in Java with graphical user interface using Swing framework.</li>
+                    <li>Implemented core game mechanics including piece rotation, collision detection, line clearing, and score calculation.</li>
+                    <li>Applied object-oriented programming principles with well-structured classes for game logic, rendering, and game state management.</li>
+                    <li>Designed responsive keyboard controls for intuitive gameplay and real-time board updates.</li>
+                    <li>Demonstrated understanding of 2D graphics rendering, event-driven programming, and game loop architecture.</li>
+                </ul>
+                <p>
+                    <a href="https://github.com/xeralix04/BTL_JAVA_TETRIS" target="_blank">
+                        <i class="fa-brands fa-github"></i> View on GitHub
+                    </a>
+                </p>
+            </article>
+
+            <hr>
+
+            <article class="project-item">
+                <h3 style="font-size: 2rem; margin-bottom: 0.5rem;">English Learning Platform</h3>
+                <p><strong>Stack:</strong> ASP.NET Core | <strong>Date:</strong> Sep – Dec 2025</p>
+                <ul>
+                    <li>Architected RESTful APIs using ASP.NET Core with clean architecture patterns (Service layer, Repository pattern).</li>
+                    <li>Implemented JWT-based authentication and session management for secure user sessions.</li>
+                    <li>Designed database schema using Entity Framework Core with SQL Server for users, vocabulary, quiz results, and chat history.</li>
+                    <li>Built async/await patterns for non-blocking I/O operations improving platform scalability.</li>
+                    <li>Implemented dependency injection for service layer scalability.</li>
+                </ul>
+                <p>
+                    <a href="https://github.com/xeralix04/BTLWEBTA/TREE/MAIN" target="_blank">
+                        <i class="fa-brands fa-github"></i> View on GitHub
+                    </a>
+                </p>
+            </article>
+        </div>
         <div class="contact-info">
             <h1 style="font-size: 4rem; font-weight: bolder;">Contact me:</h1>
             <p>Email: cuongnguyen02042004@gmail.com</p>
