feat:create css

--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-        <title>My Portfolio</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div class="about-me">
-            <h1 style="font-size: 4rem; font-weight: bolder;">About me</h1>
-            <h2 style="font-size: 2.8rem; font-weight: 500;">Nguyen Hung Cuong</h2>
-            <p>I'm a final year Computer Science major and Java Intern, eager to explore new horizons</p>
-        </div>
-        <div class="contact-info">
-            <h1 style="font-size: 4rem; font-weight: bolder;">Contact me:</h1>
-            <p>Email: cuongnguyen02042004@gmail.com</p>
-            <p>Phone: 0399191156</p>
-        </div>
-        <form action="">
-            <label for="email">Email</label> <br>
-            <input type="text" name="email" id="email"> <br>
-            <label for="com">Request</label> <br>
-            <textarea name="com" id="com" cols="20" rows="5"></textarea> <br>
-            <input type="submit" value="send" name="submit" id="submit">
-        </form>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="style.css">
+    <title>My Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <div class="about-me">
+        <h1 style="font-size: 4rem; font-weight: bolder;">About me</h1>
+        <h2 style="font-size: 2.8rem; font-weight: 500;">Nguyen Hung Cuong</h2>
+        <p>I'm a final year Computer Science major and Java Intern, eager to explore new horizons</p>
+    </div>
+    <div class="contact-info">
+        <h1 style="font-size: 4rem; font-weight: bolder;">Contact me:</h1>
+        <p>Email: cuongnguyen02042004@gmail.com</p>
+        <p>Phone: 0399191156</p>
+    </div>
+    <form action="">
+        <label for="email">Email</label> <br>
+        <input type="text" name="email" id="email"> <br>
+        <label for="com">Request</label> <br>
+        <textarea name="com" id="com" cols="20" rows="5"></textarea> <br>
+        <input type="submit" value="send" name="submit" id="submit">
+    </form>
+</body>
+
 </html>
